[package]
name = "pallet-auction-manager"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-traits = { workspace = true }
pallet-auction = { path = "../auction" }
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-auction = { path = "../auction", features = ["std"] }
pallet-cdp-treasury = { path = "../cdp-treasury", features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-asset-conversion = { workspace = true, features = ["std"] }
pallet-assets-freezer = { workspace = true, features = ["std"] }
pallet-assets-holder = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-cdp-treasury/std",
	"pallet-assets/std",
	"pallet-asset-conversion/std",
	"pallet-assets-freezer/std",
	"pallet-assets-holder/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
