[package]
name = "pallet-auction-manager"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false, features = ["derive"] }
scale-info = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-traits = { workspace = true, default-features = false }
pallet-auction = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-cdp-treasury = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-asset-conversion = { workspace = true, features = ["std"] }
pallet-assets-freezer = { workspace = true, features = ["std"] }
pallet-assets-holder = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["derive"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-balances/std",
	"pallet-cdp-treasury/std",
	"pallet-assets/std",
	"pallet-asset-conversion/std",
	"pallet-assets-freezer/std",
	"pallet-assets-holder/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
