[package]
name = "pallet-cdp-engine"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true }
rand_chacha = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-application-crypto = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
serde = { features = ["derive"], workspace = true, optional = true }
pallet-traits = { path = "../traits", default-features = false }
pallet-loans = { path = "../loans", default-features = false }
pallet-balances = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }

# Add sp-core for mock runtime
[dependencies.sp-core]
workspace = true
optional = true

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"rand_chacha/std",
	"scale-info/std",
	"serde",
	"sp-application-crypto/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-traits/std",
	"pallet-loans/std",
	"pallet-balances/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-traits/try-runtime",
	"pallet-loans/try-runtime",
	"pallet-balances/try-runtime",
]
