[package]
name = "pallet-cdp-treasury"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true, default-features = false }
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-traits = { workspace = true, default-features = false }
pallet-asset-conversion = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-auction = { path = "../auction", features = ["std"] }
serde = { workspace = true, features = ["derive"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-asset-conversion/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
