[package]
name = "pallet-emergency-shutdown"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
pallet-traits = { workspace = true }
pallet-loans = { path = "../loans", default-features = false }
pallet-auction-manager = { path = "../auction-manager", default-features = false }
pallet-cdp-treasury = { path = "../cdp-treasury", default-features = false }


[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-traits = { workspace = true, features = ["std"] }
pallet-cdp-treasury = { path = "../cdp-treasury", features = ["std"] }
pallet-loans = { path = "../loans", features = ["std"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-loans/std",
	"pallet-auction-manager/std",
	"pallet-cdp-treasury/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-traits/std",
    "pallet-balances/std",
    "pallet-assets/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-loans/try-runtime",
]
