[package]
name = "pallet-emergency-shutdown"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-traits = { workspace = true, default-features = false }
pallet-loans = { workspace = true, default-features = false }
pallet-auction-manager = { workspace = true, default-features = false }
pallet-cdp-treasury = { workspace = true, default-features = false }


[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-traits = { workspace = true, features = ["std"] }
pallet-cdp-treasury = { workspace = true, features = ["std"] }
pallet-loans = { workspace = true, features = ["std"] }


[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-loans/std",
	"pallet-auction-manager/std",
	"pallet-cdp-treasury/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-traits/std",
    "pallet-balances/std",
    "pallet-assets/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-loans/try-runtime",
]
