[package]
name = "pallet-honzon"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
codec = { workspace = true }
scale-info = { workspace = true }
sp-runtime = { workspace = true }
sp-core = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
sp-std = { workspace = true }
pallet-traits = { path = "../traits", default-features = false }
pallet-cdp-engine = { path = "../cdp-engine", default-features = false }
pallet-loans = { path = "../loans", default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-cdp-treasury = { path = "../cdp-treasury", default-features = false }
pallet-assets = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-cdp-engine/std",
	"pallet-cdp-treasury/std",
	"pallet-loans/std",
	"pallet-timestamp/std",
	"pallet-traits/std",
	"sp-arithmetic/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-cdp-engine/try-runtime",
	"pallet-cdp-treasury/try-runtime",
	"pallet-loans/try-runtime",
]
