[package]
name = "pallet-honzon"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }
pallet-traits = { workspace = true, default-features = false }
pallet-cdp-engine = { workspace = true, default-features = false }
pallet-loans = { workspace = true, default-features = false }
num-traits = { workspace = true, default-features = false }

[dev-dependencies]
sp-io = { workspace = true }
pallet-balances = { workspace = true }
pallet-timestamp = { workspace = true }
pallet-cdp-treasury = { workspace = true, default-features = false }
pallet-assets = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"sp-core/std",
	"sp-runtime/std",
	"sp-std/std",
	"pallet-assets/std",
	"pallet-balances/std",
	"pallet-cdp-engine/std",
	"pallet-cdp-treasury/std",
	"pallet-loans/std",
	"pallet-timestamp/std",
	"pallet-traits/std",
	"sp-arithmetic/std"
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-cdp-engine/try-runtime",
	"pallet-cdp-treasury/try-runtime",
	"pallet-loans/try-runtime",
]
