[package]
name = "pallet-issuance-buffer"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true }
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true }
sp-arithmetic = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

frame-system = { workspace = true }
frame-support = { workspace = true }

pallet-traits = { workspace = true }
pallet-oracle = { workspace = true }
pallet-cdp-treasury = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
pallet-loans = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-cdp-treasury/std",
    "pallet-loans/std",
    "pallet-oracle/std",
    "pallet-traits/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
