[package]
name = "pallet-issuance-buffer"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true, default-features = false }
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true, default-features = false }
sp-arithmetic = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

frame-system = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }

pallet-traits = { workspace = true, default-features = false }
pallet-oracle = { workspace = true, default-features = false }
pallet-cdp-treasury = { workspace = true, default-features = false }

[dev-dependencies]
sp-core = { workspace = true }
sp-io = { workspace = true }
pallet-balances = { workspace = true, features = ["std"] }
pallet-assets = { workspace = true, features = ["std"] }
pallet-loans = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-cdp-treasury/std",
    "pallet-assets/std",
    "pallet-loans/std",
    "pallet-oracle/std",
    "pallet-traits/std",
    "scale-info/std",
    "sp-runtime/std",
    "sp-std/std",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
]
