[package]
name = "pallet-loans"
version = "1.0.0"
authors = ["Acala Developers"]
edition = { workspace = true }

[dependencies]
log = { workspace = true }
codec = { workspace = true, features = ["max-encoded-len"] }
scale-info = { workspace = true }

frame-system = { workspace = true }
frame-support = { workspace = true }
sp-std = { workspace = true }
sp-runtime = { workspace = true }

pallet-traits = { workspace = true }

[dev-dependencies]
sp-core = { workspace = true, features = ["std"] }
sp-io = { workspace = true, features = ["std"] }
pallet-balances = { workspace = true, features = ["std"] }
pallet-cdp-treasury = { workspace = true, features = ["std"] }
pallet-issuance-buffer = { path = "../issuance-buffer", features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-traits/std",
	"scale-info/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
