[package]
name = "pallet-savings"
version = "0.1.0"
authors = ["Acala Developers", "Parity Technologies <admin@parity.io>"]
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "FRAME savings pallet"

[lints]
workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { workspace = true }
frame-benchmarking = { workspace = true, optional = true }
frame-support = { workspace = true, features = ["experimental"] }
frame-system = { workspace = true }
scale-info = { workspace = true, features = ["derive"] }
sp-api = { workspace = true }
sp-arithmetic = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }

pallet-asset-rewards = { workspace = true, default-features = false }

[dev-dependencies]
pallet-assets = { workspace = true }
pallet-balances = { workspace = true }
pallet-assets-freezer = { workspace = true }
pallet-assets-holder = { workspace = true }

[features]
default = ["std"]
std = [
    "codec/std",
    "frame-benchmarking?/std",
    "frame-support/std",
    "frame-system/std",
    "pallet-asset-rewards/std",
    "pallet-assets/std",
    "pallet-balances/std",
    "pallet-assets-freezer/std",
    "pallet-assets-holder/std",
    "scale-info/std",
    "sp-api/std",
    "sp-arithmetic/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
]
runtime-benchmarks = [
    "frame-benchmarking/runtime-benchmarks",
    "frame-support/runtime-benchmarks",
    "frame-system/runtime-benchmarks",
    "pallet-asset-rewards/runtime-benchmarks",
    "pallet-assets/runtime-benchmarks",
    "pallet-balances/runtime-benchmarks",
    "pallet-assets-freezer/runtime-benchmarks",
    "pallet-assets-holder/runtime-benchmarks",
    "sp-runtime/runtime-benchmarks",
]
try-runtime = [
    "frame-support/try-runtime",
    "frame-system/try-runtime",
    "pallet-asset-rewards/try-runtime",
    "pallet-assets/try-runtime",
    "pallet-balances/try-runtime",
    "pallet-assets-freezer/try-runtime",
    "pallet-assets-holder/try-runtime",
    "sp-runtime/try-runtime",
]
