[package]
name = "pallet-traits"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "A collection of traits for the Honzon protocol and related pallets."

[dependencies]
impl-trait-for-tuples = { workspace = true }
codec = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, features = ["std"], optional = true }

frame-support = { workspace = true }
frame-system = { workspace = true }
sp-runtime = { workspace = true }
sp-std = { workspace = true }
sp-core = { workspace = true }
sp-io = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-support/std",
	"frame-system/std",
	"scale-info/std",
	"serde",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
