[package]
name = "pallet-oracle-runtime-api"
version = "1.0.0"
authors.workspace = true
edition.workspace = true
license = "Apache-2.0"
homepage.workspace = true
repository.workspace = true
description = "Runtime API for the oracle pallet."

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive"] }
sp-api = { workspace = true }
sp-std = { workspace = true }
scale-info = { workspace = true }


[features]
default = [ "std" ]
std = [
    "codec/std",
    "sp-api/std",
    "sp-std/std",
    "scale-info/std",
]
